--- a/src/Nivel 1/levelOne.css
+++ b/src/Nivel 1/levelOne.css
@@ -1,6 +1,8 @@
 
 .levelOne > .text{
 
+    user-select: none;
+
     position: absolute;
 
     z-index: 2000;
@@ -20,6 +22,14 @@
     padding: 20px;
 
     box-sizing: border-box;
+
+    font-size: 2em;
+
+}
+
+.levelOne > .text > p{
+
+    margin: 0;
 
 }
 
