--- a/src/Nivel 1/back.css
+++ b/src/Nivel 1/back.css
@@ -14,3 +14,64 @@
     height: 100%;
 
 }
+
+.Back > .modal{
+
+    width: 100%;
+
+    height: 100%;
+
+    background-color: black;
+
+    position: absolute;
+
+    top: 0;
+
+    z-index: 3000;
+
+    color: greenyellow;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
+    flex-direction: column;
+
+}
+
+.Back > .modal > h2{
+
+    font-size: 5em;
+
+}
+
+.Back > .modal > input{
+    
+    background-color: transparent;
+    
+    font-size: 4em;
+    
+    border: white 3px solid;
+    
+    border-radius: 4px;
+    
+    padding: 50px;
+
+    outline: none;
+    
+    color: inherit;
+    
+}
+
+.Back > .modal > .button{
+
+    user-select: none;
+
+    font-size: 3em;
+
+    margin-top: 30px;
+
+    cursor: pointer;
+}
