--- a/src/inicio/inicio.css
+++ b/src/inicio/inicio.css
@@ -59,7 +59,7 @@
 
     width: 350px;
 
-    height: 500px;
+    height: 400px;
 
     background-color: rgba(255, 255, 255, 0.5);
 
@@ -178,5 +178,33 @@
     background-repeat: no-repeat;
 
     background-position: center;
+
+}
+
+.Inicio .credits{
+
+    width: 100%;
+
+    height: 100%;
+
+    position: absolute;
+
+    z-index: 3000;
+
+    background-color: black;
+
+    top: 0;
+
+    color: crimson;
+
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
+    font-size: 2em;
+
+    flex-direction: column;
 
 }
