--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,12 @@
 
 .load{
 
+    display: flex;
+
+    justify-content: center;
+
+    align-items: center;
+
     position: absolute;
 
     z-index: 3000;
@@ -42,5 +48,11 @@
     font-size: 5em;
 
     font-family: sans-serif;
+
+    top: 0;
+
+    width: 100vw;
+
+    height: 100vh;
 
 }
